--- a/04-proyecto-seguros/index.html
+++ b/04-proyecto-seguros/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cotizador de Seguros</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Staatliches">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px">
   </head>
   <body>
     <div id="root"></div>
